# laue-dials

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  build_docs.yml  dev_build.yml  docs.yml  format.yml  publish.yml  test_build_docs.yml
_modules/: index.html
_modules/laue_dials/: skeleton.html
_modules/laue_dials/algorithms/: diffgeo.html  integration.html  laue.html  monochromatic.html  outliers.html
_modules/laue_dials/command_line/: compute_rmsds.html  find_spots.html  index.html  initial_solution.html  integrate.html  optimize_indexing.html  plot_wavelengths.html  predict.html  refine.html  sequence_to_stills.html  version.html
_modules/laue_dials/diagnostics/: diffgeolib.html
_modules/laue_dials/utils/: matching.html  version.html
_sources/: index.rst.txt
_sources/api/: laue_dials.algorithms.rst.txt  laue_dials.command_line.rst.txt  laue_dials.diagnostics.rst.txt  laue_dials.rst.txt  laue_dials.utils.rst.txt  modules.rst.txt
_sources/cli/: functions.md.txt  index.rst.txt  initial_solution.rst.txt  integrate.rst.txt
_sources/notebooks/pdz2/: tutorial_combine_passes.ipynb.txt
_sources/tutorials/: tutorial_README.rst.txt
_static/: alabaster.css  documentation_options.js
api/: laue_dials.algorithms.html  laue_dials.command_line.html  laue_dials.diagnostics.html  laue_dials.html  laue_dials.utils.html  modules.html
cli/: compute_rmsds.html  find_spots.html  functions.html  index.html  initial_solution.html  integrate.html  optimize_indexing.html  plot_wavelengths.html  predict.html  refine.html  sequence_to_stills.html  version.html
docs/: conf.py  index.rst  requirements.txt  tutorial.md
docs/api/: laue_dials.algorithms.rst  laue_dials.command_line.rst  laue_dials.diagnostics.rst  laue_dials.rst  laue_dials.utils.rst
docs/cli/: compute_rmsds.rst  find_spots.rst  functions.md  initial_solution.rst  integrate.rst  optimize_indexing.rst  plot_wavelengths.rst  predict.rst  refine.rst  sequence_to_stills.rst  version.rst
docs/notebooks/: tutorials.rst
docs/notebooks/hewl/: hewl.rst
docs/notebooks/pdz2/: pdz2.rst
docs/tutorials/: download_data.sh  manuscript_env.yaml  notebooks.rst  tutorial_README.rst  tutorials.rst
docs/tutorials/hewl/: HEWL_anom_laue_dials_processing_final.ipynb  HEWL_anom_laue_dials_processing_final.rst  HEWL_anom_laue_dials_processing_final_rst.rst  README.txt
docs/tutorials/pdz2/: tutorial_combine_passes_rst.rst
examples/: align_crystals.py  compare_A_matrices.py  diffgeolib.py  initial_solution.py  match_precog_hkls.py  pipeline.py  pipeline.sh  quintile_strongs.py  serial_pipeline.sh  tutorial.ipynb
notebooks/: tutorials.html
notebooks/hewl/: HEWL_anom_laue_dials_processing_final.html  hewl.html
notebooks/pdz2/: pdz2.html  tutorial_combine_passes.html
src/laue_dials/: __init__.py  skeleton.py
src/laue_dials/algorithms/: diffgeo.py  integration.py  laue.py  monochromatic.py  outliers.py
src/laue_dials/command_line/: combine_mtzs.py  compute_rmsds.py  find_spots.py  index.py  initial_solution.py  integrate.py  optimize_indexing.py  plot_wavelengths.py  predict.py  refine.py  sequence_to_stills.py  version.py
src/laue_dials/diagnostics/: compare_A_matrices.py  diffgeolib.py  match_precog_hkls.py  quintile_strongs.py  viewer.py
src/laue_dials/utils/: expt_utils.py  matching.py  plots.py  refl_utils.py  version.py
tests/: conftest.py  test_initial_solution.py  test_skeleton.py
tests/algorithms/: test_diffgeo.py  test_integration.py  test_laue.py  test_monochromatic.py  test_outliers.py
tests/data/: optimized.expt  poly_refined.expt
tutorials/: notebooks.html  tutorial_README.html  tutorials.html
tutorials/hewl/: HEWL_anom_laue_dials_processing_final_rst.html
tutorials/pdz2/: tutorial_combine_passes_rst.html
