[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "laue_dials"
dynamic = ["description","authors","readme","requires-python","license","classifiers","version","entry-points","dependencies","optional-dependencies","scripts"]

[tool.setuptools_scm]
