[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "laue_dials"
dynamic = ["description","authors","readme","requires-python","license","classifiers","version","entry-points","dependencies","optional-dependencies","scripts"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
